# formbuilder

./: .env.template  .gitignore  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 228307ff4a5f_init.py  47e3425d9e76_dashobard_primary_key.py  572057f08861_record_data_as_jsonb.py  600f8a7729b7_structure.py  7ad23910d65f_dashboard.py  8bd5b66a1186_form_shared.py  9b3eb2788072_form_records.py  a50edf75721d_forms.py  e855f18a28fa_delete_is_active.py  f9e57b4441c0_fill_form_structure.py
backend/src/: __init__.py  api.py  config.py  main.py
backend/src/auth/: schemas.py
backend/src/dashboard/: dependencies.py  models.py  schemas.py  services.py  views.py
backend/src/database/: core.py
backend/src/forms/: dependencies.py  helpers.py  models.py  schemas.py  services.py  types.py  views.py
backend/src/forms/structure/: base.py  record.py  registry.py  schemas.py  structure.py  validators.py
backend/src/forms/structure/fields/boolean/: __init__.py  schemas.py  strategy.py
backend/src/forms/structure/fields/text/: __init__.py  schemas.py  strategy.py
backend/src/forms/structure/fields/text_area/: __init__.py  schemas.py  strategy.py
backend/src/permissions/: dependencies.py
backend/src/users/: cli.py  models.py  schemas.py  services.py  views.py
