[tool.black]
line-length = 100
target-version = ['py312']

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
disallow_untyped_defs = true

plugins = [
  "pydantic.mypy"
]

[tool.poetry]
name = "formbuilder"
version = "0.1.0"
description = ""
authors = ["esutory"]
readme = "README.md"
packages = [
    { include = "backend" },
]

[tool.poetry.scripts]
cli = "backend.src.cli:app"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["all"], version = "^0.111.1"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.31"}
mypy = "^1.11.0"
pre-commit = "^3.8.0"
black = "^24.4.2"
isort = "^5.13.2"
alembic = "^1.13.2"
asyncpg = "^0.29.0"
python-jose = "^3.3.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
typer = "^0.12.3"
email-validator = "^2.2.0"
syncer = "^2.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
